--- a/docker-compose/correction-tp-reseaux-dockercompose/docker-compose.yml
+++ b/docker-compose/correction-tp-reseaux-dockercompose/docker-compose.yml
@@ -1,23 +1,24 @@
 version: "3.8"
 services:
-  web:
+  nginx:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./nginx-app
+      dockerfile: Dockerfile.nginx
     ports:
       - "80:80"
-    volumes:
-      - "./html:/usr/share/nginx/html"
-    depends_on:
-      - db
+  
+  php:
+    build:
+      context: ./symfony-app
+      dockerfile: Dockerfile.symfony
+    
+
   db:
     image: "postgres:latest"
     environment:
       POSTGRES_DB: exempledb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-    volumes:
-      - "db-data:/usr/postgres/data"
 volumes:
   db-data: null
 
