--- a/docker-compose/correction-tp-reseaux-dockercompose/docker-compose.yml
+++ b/docker-compose/correction-tp-reseaux-dockercompose/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     build:
       context: ./symfony-app
       dockerfile: Dockerfile.symfony
+    depends_on:
+      db:
+        condition: service_healthy
     
 
   db:
@@ -19,6 +22,12 @@ services:
       POSTGRES_DB: exempledb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d db"]
+      interval: 10s
+      timeout: 30s
+      retries: 1
+      start_period: 10s
 volumes:
   db-data: null
 
